# shimiko

./: Cargo.toml  README.md  mise.toml
src/: extract.rs  lib.rs  main.rs  task.rs
tests/: cli.rs
