[package]
name = "shimiko"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
assert_cmd = "2.0.16"
bytes = "1.10.0"
clap = "4.5.31"
indicatif = "0.17.11"
reqwest = "0.12.12"
sevenz-rust2 = "0.10.0"
tempfile = "3.18.0"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zip = "2.2.3"
